# game_spop

./: .gitignore  CMakeLists.txt  README.md  audio.c  audio.h  cpu.c  cpu.h  emulator.c  emulator.h  game_spop.project  game_spop_emu.project  gb_interrupts.c  gb_interrupts.h  graphics.c  graphics.h  instr_lists.c  instr_lists.h  main.c  mbc.c  mbc.h  opcodes.c  opcodes.h  prefixed_opcodes.c  prefixed_opcodes.h
.github/workflows/: codeql.yml
docs/: instructions.ods  known_bugs.txt
